--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
       href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css"
     />
-    <title>Alexandra Antkowiak</title>
+    <title>Alexandra Garcia</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
